# vote_ray

./: .env.example  .gitmodules  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: ubuntu-archlinux.yml  ubuntu-nix.yml  ubuntu.yml
src/: main.rs
src/business/: candidate.rs  mod.rs  pledge.rs
src/database/: candidate_repository.rs  mod.rs  pledge_repository.rs
src/rest/: mod.rs
src/rest/dto/: candidate.rs  pledge.rs
src/rest/handlers/: candidate.rs  pledge.rs
src/rest/v1/: mod.rs
